# GeforceNowAMD

./: .gitignore  CMakeLists.txt  README.md
injector/: injector.cpp
src/: dllmain.cpp
src/SDK/: SDK.cpp  SDK.h  offsets.h
src/SDK/Bifrost/: NVB.h
src/SDK/Geronimo/: SessionContext.h
src/aimahead/: aimahead.cpp  aimahead.h
src/aimahead/hooks/: hooks.cpp  hooks.h
src/aimahead/hooks/callbacks/: on_platform_supports_fps.cpp  should_process_imgui_events.cpp
src/aimahead/hooks/core/: allocate_page_near_address.cpp  install_hook.cpp  uninstall_hook.cpp  write_absolute_jump.cpp
src/aimahead/memory/: memory.cpp  memory.h
src/aimahead/utils/: utils.cpp  utils.h
